[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobfuscator"
version = "1.0.4"
description = "JObfuscator is a source code obfuscator for the Java programming language. Obfuscate and protect your Java source code and algorithms from hacking, cracking, reverse engineering, decompilation, and technology theft. JObfuscator provides advanced Java source code parsing based on AST trees, multiple advanced obfuscation strategies are available."
readme = "README.md"
requires-python = ">=3"
license = { text = "Apache-2.0" }
authors = [
    { name = "Bartosz Wójcik", email = "support@pelock.com" },
]
keywords = [
    "java",
    "jar",
    "war",
    "class",
    "source",
    "obfuscator",
    "obfuscation",
    "obfuscate",
    "decompile",
    "decompiler",
    "decompilation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Java",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://www.pelock.com"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
